--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400&display=swap');
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: 'Muli', sans-serif;
+  font-family: 'Mulish', sans-serif;
+  font-weight: 200;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -15,26 +15,26 @@ body {
   margin: 0;
   background: rgb(228, 231, 235);
   background: linear-gradient(
-    360deg,
-    rgba(228, 231, 235, 1) 0%,
-    rgba(161, 172, 184, 1) 100%
+    180deg,
+    rgb(208, 229, 255) 0%,
+    rgb(113, 180, 250) 100%
   );
 }
 
 .key {
   border: 1px solid #999;
   background-color: #eee;
-  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   border-radius: 0.3rem;
   display: inline-flex;
   align-items: center;
   font-size: 1.3rem;
+  font-weight: 300;
   padding: 20px;
   flex-direction: column;
   margin: 1rem;
   min-width: 10rem;
   position: relative;
-  font-weight: bold;
 }
 
 .key small {
@@ -45,4 +45,5 @@ body {
   width: 100%;
   color: #555;
   font-size: 1rem;
+  font-weight: 400;
 }
