--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ body {
   border: 1px solid #000448;
   background-color: rgb(208, 229, 255);
   color: #000448;
+  font-size: 3rem;
   filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.4));
   box-shadow: inset 0px 0 14px rgba(0, 115, 230, 0.3),
     inset 0px 0 18px rgba(0, 115, 230, 0.3),
